<resources>
  <string name="app_name">Service Time</string>
  <string name="dialog_message">Clear All?</string>
  <string name="dialog_title">Warning</string>
  <string name="ok">Yes</string>
  <string name="cancel">No</string>
  <string name="group_2">Group 2</string>
  <string name="group_1">Group 1</string>
  <string name="group_3">Group 3</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="discard">Discard</string>
  <string name="copy_to_clipboard">Copy To Clipboard</string>
  <string name="clear">Clear</string>
</resources>
