<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <TextView
      android:id="@+id/textView"
      style="@android:style/TextAppearance.DeviceDefault.Medium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="" />
  </ScrollView>

  <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/group_1"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
      android:id="@+id/action1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:backgroundTint="@color/colorGreenTint"
      android:text="@string/start" />

    <Button
      android:id="@+id/discard1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/discard" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/group_2"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
      android:id="@+id/action2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:backgroundTint="@color/colorGreenTint"
      android:text="@string/start" />

    <Button
      android:id="@+id/discard2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/discard" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/group_3"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
      android:id="@+id/action3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:backgroundTint="@color/colorGreenTint"
      android:text="@string/start" />

    <Button
      android:id="@+id/discard3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/discard" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/copy_to_clipboard"
      tools:ignore="ButtonStyle" />


    <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/clear"
      tools:ignore="ButtonStyle" />
  </LinearLayout>
</LinearLayout>